# Dhxper

./: README.md  demos.jks
app/: build.gradle
app/src/androidTest/java/com/tsz/lier/dhxper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/src/include/: DvmFunctionTable.h  dexheader.h  elf.h
app/src/main/cpp/src/inlinehook/: inlineHook.c  inlineHook.h
app/src/main/cpp/src/libdex/: CmdUtils.cpp  DexCatch.h  DexClass.h  DexDataMap.cpp  DexDebugInfo.cpp  DexFile.cpp  DexFile.h  DexSwapVerify.cpp  OptInvocation.cpp  ZipArchive.cpp  common.h  safe_iop.c
app/src/main/cpp/src/oo/: AccessCheck.cpp  AccessCheck.h  Array.cpp  Array.h  Class.cpp  Class.h  Object.cpp  Object.h  ObjectInlines.h  Resolve.cpp  Resolve.h  TypeCheck.cpp  TypeCheck.h
app/src/main/cpp/src/unpack/: NativeStackTrace.cpp  NativeStackTrace.h  init.cpp  init.h  linker.h  shell_version1.cpp  shell_version3.cpp  socrack.cpp
app/src/main/cpp/src/vm/native/: dalvik_system_DexFile.cpp  test.py
app/src/main/cpp/src/vm/oo/: Array.h
app/src/main/java/com/tsz/lier/dhxper/: Appinfo.java  Dumper.java  HotLoadPackageEntry.java  MainActivity.java  PluginNativeLibLoader.java  SelfMethods.java  XposedInit.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/tsz/lier/dhxper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
